--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -60,7 +60,7 @@ header {
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 800px 900px 1100px 1650px 1500px 1000px;
+    grid-template-rows: 800px 900px 1100px 1650px 2200px 1000px;
     grid-template-areas:
         "sobre-mim"
         "skills"
@@ -570,7 +570,7 @@ main {
     align-items: center;
     width: 32%;
     max-width: 450px;
-    height: 550px;
+    height: 600px;
     background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
     border-radius: 20px;
@@ -689,6 +689,18 @@ main {
     transform: scale(1.1);
 }
 
+.imagem-thumb-7 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/barraflix-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-7:hover {
+    transform: scale(1.1);
+}
 .portifolio-info {
     width: 100%;
     height: 100%;
@@ -980,6 +992,7 @@ h1 {
     font-size: 50px;
     color: aliceblue;
     font-weight: bold;
+    text-align: center;
 }
 
 h2 {
