--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -354,7 +354,7 @@ nav {
     }
 }
 
-.champ-card {
+.champ-card{
     width: 180px;
     height: 240px;
     background-color: black;
@@ -366,8 +366,12 @@ nav {
     animation-name: fadeIn;
     animation-duration: 1s;
     animation-direction: normal;
-    filter: brightness(60%);
     
+    
+}
+
+.champ-card:not(.champ-card-footer){
+    filter: brightness(60%);
 }
 
 @keyframes fadeIn {
@@ -424,6 +428,7 @@ nav {
     background-color: rgb(0, 134, 90);
     padding-left: 10px;
     transition: all 300ms;
+    
 }
 
 [destaqueFooter] {
